--- a/html_folder/FirstHTML.html
+++ b/html_folder/FirstHTML.html
@@ -13,19 +13,19 @@
 		<p>Let's take a quick look!</p>
 		<!--This is how to add a video-->
 		<video width="700" height="auto" controls>
-			<source src="C:\Users\admin\Documents\League of Legends\Highlights\ikala.webm" />
+			<source src="https://github.com/alterwebdesigner0206/alterakalitutorial/blob/master/html_folder/ikala.webm" />
 			Your browser do not approve webm
 			</video>
 		<br>
 
 		<!--This is where to add the mp3-->
-		<audio src="C:\Users\admin\Desktop\Bao_Hoang\(D)_SELF_Study\Html_5\Audio\Test.mp3#t=0:18" controls=""></audio>
+		<audio src="https://github.com/alterwebdesigner0206/alterakalitutorial/blob/master/html_folder/Test.mp3" autoplay></audio>
 		<br>
 
 		<!--<i class="fas fa-headset"></i> -->
 		<a href="https://www.youtube.com/watch?v=b-s2YVbRP8I">Simple First!		</a> <!--To add a web -->
 		<figure>
-			<img src="C:\Users\admin\Desktop\Bao_Hoang\(D)_SELF_Study\Html_5\Image\akali.jpg" 
+			<img src="https://www.xemgame.com/imgstore/pictures/xemgame/2019/08/30/Akali.png" 
 				width = "auto" height = "100px" alt = "My style">
 			<figcaption> KDA Akali </figcaption>
 		</figure>
