--- a/html_folder/FirstHTML.html
+++ b/html_folder/FirstHTML.html
@@ -19,7 +19,7 @@
 		<br>
 
 		<!--This is where to add the mp3-->
-		<audio src="https://github.com/alterwebdesigner0206/alterakalitutorial/blob/master/html_folder/Test.mp3" autoplay></audio>
+		<audio src="https://github.com/alterwebdesigner0206/alterakalitutorial/blob/master/html_folder/Test.mp3" control></audio>
 		<br>
 
 		<!--<i class="fas fa-headset"></i> -->
